# offboard

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt
app/include/: parameter_list.h  yaml_helper.h
app/parameters/: params.yaml  params_sim.yaml
app/src/: main.cpp  quad_control.cpp  quad_control.cpp.save
app/src/old code/: attitude_offboard.cpp  offboard_example.cpp  position_ctrl_experiments.cpp
app_quad_control/: CMakeLists.txt
app_quad_control/include/: compensators.h  include_helper.h  trajectories.h  yaml_helper.h
app_quad_control/parameters/: params.yaml
app_quad_control/src/: compensators.cpp  quad_control.cpp  quad_control_experimental.cpp  trajectories.cpp
app_thrust_stand/: CMakeLists.txt  thurst_vals.txt  thurst_values.txt
app_thrust_stand/include/: sub_callback.h
app_thrust_stand/src/: thrust_stand.cpp
flight_analysis/: ground_effect_model.py
lib/: CMakeLists.txt
log/: DYN_DATA.csv  Plot.py  STATIC_DATA.csv  THRUST_STAND_temp.csv  no_thether_log_1.csv  temp (conflicted copy 2022-04-11 131850).csv  temp (conflicted copy 2022-04-11 132740).csv  temp.csv  thether_log_1.csv
log/Cheeseman_test/: CHEESEMAN_01.csv  CHEESEMAN_02.csv  HAYDEN_01.csv  HAYDEN_02.csv  HAYDEN_03.csv  HAYDEN_04.csv  HAYDEN_05.csv  HIGH_01.csv  HIGH_02.csv  HIGH_04.csv  LOW_01.csv  LOW_02.csv  LOW_03.csv  NOBAHARI_01.csv  Plot.py  SANCHEZ_02.csv  SANCHEZ_05.csv  command  readme.md
log/Cheeseman_v2/: NOBAHARI_01.csv  Plot.py  command  metrics
log/Compensator_compairison/: Compairison.py
tests/: CMakeLists.txt
tests/compensator_test/: main.cpp
(+73 files in other folders)
